--- a/index.html
+++ b/index.html
@@ -10,6 +10,33 @@
       href="https://fonts.googleapis.com/css2?family=STIX+Two+Text:ital,wght@0,400..700;1,400..700&display=swap"
       rel="stylesheet"
     />
+
+    <!-- social media snippets -->
+    <meta
+      name="description"
+      content="i build AI systems then surf — full stack from systems to revenue."
+    />
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="John Patrick Amata" />
+    <meta
+      property="og:description"
+      content="i build AI systems then surf — full stack from systems to revenue."
+    />
+    <meta property="og:url" content="https://johnamata.com/" />
+    <meta
+      property="og:image"
+      content="https://johnamata.com/assets/me-profile.jpg"
+    />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="John Patrick Amata" />
+    <meta
+      name="twitter:description"
+      content="i build AI systems then surf — full stack from systems to revenue."
+    />
+    <meta
+      name="twitter:image"
+      content="https://johnamata.com/assets/me-profile.jpg"
+    />
   </head>
   <body>
     <div id="page-container">
