--- a/w/full-send.html
+++ b/w/full-send.html
@@ -6,6 +6,34 @@
     <title>full-send - john patrick amata</title>
     <link rel="stylesheet" href="../styles.css" />
     <link rel="icon" href="../eagle.png" sizes="any" />
+
+    <!-- social media shit -->
+    <meta
+      name="description"
+      content="full send - execution-maxxing ethos, velocity over hesitation"
+    />
+    <meta property="og:type" content="article" />
+    <meta property="og:title" content="full send - john patrick amata" />
+    <meta
+      property="og:description"
+      content="full send - execution-maxxing ethos, velocity over hesitation"
+    />
+    <meta property="og:url" content="https://johnamata.com/w/full-send.html" />
+    <meta
+      property="og:image"
+      content="https://johnamata.com/assets/meaning-manifesto.png"
+    />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="full send - john patrick amata" />
+    <meta
+      name="twitter:description"
+      content="full send - execution-maxxing ethos, velocity over hesitation"
+    />
+    <meta
+      name="twitter:image"
+      content="https://johnamata.com/assets/meaning-manifesto.png"
+    />
+
     <style>
       /* hr stuff */
       .h2-with-line {
@@ -13,13 +41,11 @@
         align-items: center;
         gap: 0.75rem;
       }
-
       .h2-with-line h2 {
         margin: 0;
-        min-width: 0; /* allow shrinking/wrapping */
-        white-space: normal; /* ensure wrapping */
+        min-width: 0;
+        white-space: normal;
       }
-
       .h2-with-line::after {
         content: '';
         flex: 1 1 auto;
@@ -27,15 +53,13 @@
         background: #000;
         margin-top: 0.1em;
       }
-
-      /* for mobile hr, push the rule to its own line so it always shows */
       @media (max-width: 520px) {
         .h2-with-line {
           flex-wrap: wrap;
         }
         .h2-with-line::after {
-          order: 2; /* place after the heading */
-          flex-basis: 100%; /* full-width line */
+          order: 2;
+          flex-basis: 100%;
           margin-top: 0.5rem;
         }
       }
@@ -159,7 +183,10 @@
               sprint into roles youre not ready for, instead of waiting and
               hoping you can get promoted
             </li>
-            <li>fake it til you make it, execute and learn in the trenches</li>
+            <li>
+              "fake it til you make it" -> No. PROVE it til you make it. you
+              execute and learn in the trenches
+            </li>
           </ul>
           <p>
             youve watched too many andrew huberman/peak performance podcasts and
@@ -354,6 +381,7 @@
           <p>so when the opportunity comes, youre already airborne</p>
           <p><mark>minimum viable lifemaxx</mark></p>
           <p>increase your input-output throughput for life</p>
+          <p>then aim your aggression</p>
           <p>for you are the postmodern odysseus</p>
           <p>
             youre not a wanderer, nor a philosopher, but a tactician of
@@ -362,6 +390,21 @@
           <p>stay kinetic and high test</p>
           <p>holy fucking shit i'm gonna tattoo that</p>
           <p>"kinetic"</p>
+          <p>for this is kinetic stoicism</p>
+          <p>
+            we acccept uncertainty, maximize all collisions, and let the vapor
+            trail build our identity. this is not self-help advice, but rules of
+            engagement
+          </p>
+          <p>
+            i'm not telling you to be reckless, i am preaching racecraft. to
+            create weaponized motion. F1 drivers hit the brakes not to slow, but
+            to go faster overall, to win the race, for velocity beats speed
+          </p>
+          <p>
+            the people who'll hate it, are the ones who need permission to feel
+            alive. be the blur, move first, for everything else is theater
+          </p>
         </section>
         <hr />
         <p><i>this post was written in 2025</i></p>
