--- a/w/index.html
+++ b/w/index.html
@@ -20,11 +20,12 @@
     ">Words</h1>
       <p><i>For Nym, he hath heard of <a href="https://www.enotes.com/topics/henry-5/quotes/men-few-words-best-men">men of few words</a>...</i></p>
       <ul>
-        <li>2025.xx.xx <a href="./arsenalmaxxing">physique</a></li>
+        <li>2025.12.31 <a href="./arsenalmaxxing">physique</a></li>
+        <li>2025.xx.xx <a href="./codemaxxing">programmer</a></li>
         <li>2025.09.09 <a href="./full-send">full send</a></li>
       </ul>
       <hr>
-      <p>enjoy my typos = no AI slop</p>
+      <p>lifemaxxing. typos = no AI slop.</p>
     </div>
     <div class="footer">
       <a href="https://blog.johnamata.com/about">contact</a> |
